# sdl-astar

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  config.h  main.cpp  robot.cpp  robot.h  world.cpp  world.h
include/: a_star.h  config.h  cursor.h  robot.h  world.h
src/: a_star.cpp  cursor.cpp  main.cpp  robot.cpp  world.cpp
